fix description collapse size

--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1574,7 +1574,7 @@ input[type="tel"] {
 
 	.panel-cover__description {
 		margin: 0 10px;
-		font-size: 1.2em; }
+		font-size: 0.9em; }
 
 	.navigation--social {
 		margin-top: 5px;
